--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
     
      <div class="buttons">
     <button id="startStop">START</button>
-     <button id="stopp">STOP</button>
+     <button id="stop">STOP</button>
       <button id="reset">RESET</button>
    
     </div>
