ストップウォッチ

--- a/main.html
+++ b/main.html
@@ -19,9 +19,9 @@
     <div id="display">0:0:0:0</div>
     
      <div class="buttons">
-    <button id="startStop">START</button>
-     <button id="stop">STOP</button>
-      <button id="reset">RESET</button>
+    <button id="startStop" >スタート</button>
+     <button id="stop">ストップ</button>
+      <button id="reset">リセット</button>
    
     </div>
    </div>
